
[TestTablePresenter/no_color - 1]
NAME       INSTALLED  FIXED IN              TYPE  VULNERABILITY  SEVERITY  EPSS         RISK         
package-1  1.1.1      *1.2.1, 2.1.3, 3.4.0  rpm   CVE-1999-0001  Low       3.0% (42nd)  1.7          
package-2  2.2.2                            deb   CVE-1999-0002  Critical  8.0% (53rd)  96.3  (kev)  

---

[TestTablePresenter/with_color - 1]
NAME       INSTALLED  FIXED IN             TYPE  VULNERABILITY  SEVERITY  EPSS         RISK         
package-1  1.1.1      1.2.1[38;5;240m, [0m[38;5;240m2.1.3[0m[38;5;240m, [0m[38;5;240m3.4.0[0m  rpm   CVE-1999-0001  [38;5;36mLow[0m       3.0% (42nd)  1.7          
package-2  2.2.2                           deb   CVE-1999-0002  [1;38;5;198mCritical[0m  8.0% (53rd)  96.3  [1;7;38;5;198m KEV [0m  

---

[TestEmptyTablePresenter - 1]
No vulnerabilities found

---

[TestHidesIgnoredMatches - 1]
NAME       INSTALLED  FIXED IN              TYPE  VULNERABILITY  SEVERITY  EPSS         RISK         
package-1  1.1.1      *1.2.1, 2.1.3, 3.4.0  rpm   CVE-1999-0001  Low       3.0% (42nd)  1.7          
package-2  2.2.2                            deb   CVE-1999-0002  Critical  8.0% (53rd)  96.3  (kev)  

---

[TestDisplaysIgnoredMatches - 1]
NAME       INSTALLED  FIXED IN              TYPE  VULNERABILITY  SEVERITY  EPSS         RISK                       
package-1  1.1.1      *1.2.1, 2.1.3, 3.4.0  rpm   CVE-1999-0001  Low       3.0% (42nd)  1.7                        
package-2  2.2.2                            deb   CVE-1999-0002  Critical  8.0% (53rd)  96.3  (kev)                
package-2  2.2.2                            deb   CVE-1999-0001  Low       3.0% (42nd)  1.7   (suppressed)         
package-2  2.2.2                            deb   CVE-1999-0002  Critical  8.0% (53rd)  96.3  (kev, suppressed)    
package-2  2.2.2                            deb   CVE-1999-0004  High      3.0% (75th)  2.2   (suppressed by VEX)  

---

[TestDisplaysDistro - 1]
NAME       INSTALLED  FIXED IN              TYPE  VULNERABILITY  SEVERITY  EPSS         RISK                     
package-1  1.1.1      *1.2.1, 2.1.3, 3.4.0  rpm   CVE-1999-0001  Low       3.0% (42nd)  1.7   (ubuntu:2.5)       
package-2  2.2.2                            deb   CVE-1999-0002  Critical  8.0% (53rd)  96.3  (kev, ubuntu:3.5)  

---

[TestDisplaysIgnoredMatchesAndDistro - 1]
NAME       INSTALLED  FIXED IN              TYPE  VULNERABILITY  SEVERITY  EPSS         RISK                                 
package-1  1.1.1      *1.2.1, 2.1.3, 3.4.0  rpm   CVE-1999-0001  Low       3.0% (42nd)  1.7   (ubuntu:2.5)                   
package-2  2.2.2                            deb   CVE-1999-0002  Critical  8.0% (53rd)  96.3  (kev, ubuntu:3.5)              
package-2  2.2.2                            deb   CVE-1999-0001  Low       3.0% (42nd)  1.7   (ubuntu:2.5, suppressed)       
package-2  2.2.2                            deb   CVE-1999-0002  Critical  8.0% (53rd)  96.3  (kev, ubuntu:3.5, suppressed)  
package-2  2.2.2                            deb   CVE-1999-0004  High      3.0% (75th)  2.2   (suppressed by VEX)            

---

[TestCSVPresenter/CSV_output - 1]
Name,Installed,Fixed-In,Type,Vulnerability,Severity,EPSS,Risk,Annotations
package-1,1.1.1,"*1.2.1, 2.1.3, 3.4.0",rpm,CVE-1999-0001,Low,3.0% (42nd),1.7,
package-2,2.2.2,,deb,CVE-1999-0002,Critical,8.0% (53rd),96.3,(kev)

---

[TestCSVPresenter/CSV_with_suppressed - 1]
Name,Installed,Fixed-In,Type,Vulnerability,Severity,EPSS,Risk,Annotations
package-1,1.1.1,"*1.2.1, 2.1.3, 3.4.0",rpm,CVE-1999-0001,Low,3.0% (42nd),1.7,
package-2,2.2.2,,deb,CVE-1999-0002,Critical,8.0% (53rd),96.3,(kev)
package-2,2.2.2,,deb,CVE-1999-0001,Low,3.0% (42nd),1.7,(suppressed)
package-2,2.2.2,,deb,CVE-1999-0002,Critical,8.0% (53rd),96.3,"(kev, suppressed)"
package-2,2.2.2,,deb,CVE-1999-0004,High,3.0% (75th),2.2,(suppressed by VEX)

---
